crates/functions/src/tests/string_binary/snapshots/substr/query_substr_null_start.snap
---
source: crates/functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr('mystring', NULL, 3) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "|        |",
        "+--------+",
    ],
)
