crates/functions/src/tests/string_binary/snapshots/substr/query_substr_null_string.snap
---
source: crates/functions/src/tests/string_binary/substr.rs
description: "\"SELECT substr(NULL, 1, 3) as result\""
---
Ok(
    [
        "+--------+",
        "| result |",
        "+--------+",
        "|        |",
        "+--------+",
    ],
)
